--- a/templates/attendance/outxlsx.html
+++ b/templates/attendance/outxlsx.html
@@ -2,28 +2,16 @@
 
 
 {% block body %}
-<div class="input-group mb-2">
-  <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-      B
-  <input type="hidden" class="form-control" name="staff_account" value="B">
-  </button>
-  
-  <ul class="dropdown-menu" id="staff_attr" aria-labelledby="dropdownMenuButton2">
-      <li><a class="dropdown-item">B</a></li>
-      <li><a class="dropdown-item">J</a></li>
-      <li><a class="dropdown-item">D</a></li>
-      <li><a class="dropdown-item">F</a></li>
-      <li><a class="dropdown-item">H</a></li>
-    </ul>
-</div>
-<div class="dropdown">
-  <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-    Dropdown button
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <li><a class="dropdown-item" href="#">Action</a></li>
-    <li><a class="dropdown-item" href="#">Another action</a></li>
-    <li><a class="dropdown-item" href="#">Something else here</a></li>
-  </ul>
+<div class="btn-toolbar justify-content-between" role="toolbar" aria-label="ボタングループを含むツールバー">
+  <div class="btn-group" role="group" aria-label="第1グループ">
+    <button type="button" class="btn btn-outline-secondary">1</button>
+    <button type="button" class="btn btn-outline-secondary">2</button>
+    <button type="button" class="btn btn-outline-secondary">3</button>
+    <button type="button" class="btn btn-outline-secondary">4</button>
+  </div>
+  <div class="input-group">
+    <div class="input-group-text" id="btnGroupAddon2">@</div>
+    <input type="text" class="form-control" placeholder="インプットグループの例" aria-label="インプットグループの例" aria-describedby="btnGroupAddon2">
+  </div>
 </div>
 {% endblock %}
