--- a/templates/attendance/DB5_base.html
+++ b/templates/attendance/DB5_base.html
@@ -11,6 +11,9 @@
     <link href="{% static 'attendance/MDB5s/css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
 
+    {% block head %}
+    {% endblock %}
+    
     <style>
     {% block style %}
     {% endblock %}
@@ -28,9 +31,7 @@
 
     <!-- MDB -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
-
     <script src="{% static 'attendance/MDB5s/js/bootstrap.js' %}"></script>
 
     <!-- Custom scripts -->
